@@ -1,135 +1,91 @@
 package com.PickOne.domain.term.controller;
 
-import com.PickOne.domain.term.controller.TermController;
-import com.PickOne.domain.term.model.domain.*;
-import com.PickOne.global.exception.BaseResponse;
-import com.PickOne.global.exception.SuccessCode;
-import com.PickOne.domain.term.dto.TermsRequest;
+import com.PickOne.domain.notification.controller.NotificationController;
+import com.PickOne.domain.term.dto.TermRequestDto;
+import com.PickOne.domain.term.model.domain.Term;
 import com.PickOne.domain.term.service.TermService;
-import org.junit.jupiter.api.DisplayName;
+import com.PickOne.global.security.filter.JwtAuthenticationFilter;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.http.ResponseEntity;
+import org.mockito.Mockito;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.context.annotation.ComponentScan;
+import org.springframework.context.annotation.FilterType;
+import org.springframework.http.MediaType;
+import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.test.web.servlet.MockMvc;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-/**
- * TermController 클래스에 대한 단위 테스트
- */
-@ExtendWith(MockitoExtension.class)
+@WithMockUser
+@WebMvcTest(
+        controllers = TermController.class,
+        excludeFilters = @ComponentScan.Filter(
+                type = FilterType.ASSIGNABLE_TYPE,
+                classes = JwtAuthenticationFilter.class)
+)
 class TermControllerTest {
 
-    @Mock
-    private TermService termService;
+    @Autowired private MockMvc mockMvc;
+    @MockBean private TermService termService;
+    @Autowired private ObjectMapper objectMapper;
 
-    @InjectMocks
-    private TermController termController;
+    private final Term mockTerm = new Term(
+            1L, "제목", "내용", "v1.0", true,
+            LocalDateTime.of(2025, 1, 1, 0, 0)
+    );
 
-    private final Long termId = 1L;
-    private final LocalDateTime now = LocalDateTime.now();
-
-    /**
-     * 약관 생성 테스트
-     */
     @Test
-    @DisplayName("약관 생성 테스트 - 성공 케이스")
-    void createTerms_Success() {
-        // given
-        Title title = mock(Title.class);
-        Content content = mock(Content.class);
-        TermsType type = mock(TermsType.class);
-        Version version = mock(Version.class);
-        EffectiveDate effectiveDate = mock(EffectiveDate.class);
-        Required required = mock(Required.class);
-
-        TermsRequest request = new TermsRequest(
-                title, content, type, version, required, effectiveDate
+    void 약관_등록_API() throws Exception {
+        TermRequestDto request = new TermRequestDto(
+                "제목", "내용", "v1.0", true,
+                LocalDateTime.of(2025, 1, 1, 0, 0)
         );
 
-        Term term = mock(Term.class);
-        when(termService.createTerms(any(Term.class))).thenReturn(term);
+        Mockito.when(termService.create(any())).thenReturn(mockTerm);
 
-        // when
-        ResponseEntity<BaseResponse<Term>> response = termController.createTerms(request);
-
-        // then
-        verify(termService).createTerms(any(Term.class));
-        assertThat(response.getBody()).isNotNull();
-        assertThat(response.getBody().getResult()).isEqualTo(term);
-        assertThat(response.getBody().getIsSuccess()).isTrue();
-        assertThat(response.getBody().getMessage()).isEqualTo(SuccessCode.CREATED.getMessage());
+        mockMvc.perform(post("/api/terms")
+                        .with(csrf()) // CSRF 토큰 추가
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.title").value("제목"))
+                .andExpect(jsonPath("$.version").value("v1.0"));
     }
 
-    /**
-     * ID로 약관 조회 테스트
-     */
     @Test
-    @DisplayName("ID로 약관 조회 테스트 - 성공 케이스")
-    void getTermsById_Success() {
-        // given
-        Term term = mock(Term.class);
-        when(termService.getTermsById(termId)).thenReturn(term);
+    void 약관_단건_조회_API() throws Exception {
+        Mockito.when(termService.getById(1L)).thenReturn(mockTerm);
 
-        // when
-        ResponseEntity<BaseResponse<Term>> response = termController.getTermsById(termId);
-
-        // then
-        verify(termService).getTermsById(termId);
-        assertThat(response.getBody()).isNotNull();
-        assertThat(response.getBody().getResult()).isEqualTo(term);
-        assertThat(response.getBody().getIsSuccess()).isTrue();
+        mockMvc.perform(get("/api/terms/1"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(1L))
+                .andExpect(jsonPath("$.required").value(true));
     }
 
-    /**
-     * 필수 약관 목록 조회 테스트
-     */
     @Test
-    @DisplayName("필수 약관 목록 조회 테스트 - 성공 케이스")
-    void getRequiredTerms_Success() {
-        // given
-        Term term1 = mock(Term.class);
-        Term term2 = mock(Term.class);
-        List<Term> requiredTerms = Arrays.asList(term1, term2);
+    void 약관_전체_조회_API() throws Exception {
+        Mockito.when(termService.getAll()).thenReturn(List.of(mockTerm));
 
-        when(termService.getRequiredTerms()).thenReturn(requiredTerms);
-
-        // when
-        ResponseEntity<BaseResponse<List<Term>>> response = termController.getRequiredTerms();
-
-        // then
-        verify(termService).getRequiredTerms();
-        assertThat(response.getBody()).isNotNull();
-        assertThat(response.getBody().getResult()).hasSize(2);
-        assertThat(response.getBody().getResult()).containsExactly(term1, term2);
-        assertThat(response.getBody().getIsSuccess()).isTrue();
+        mockMvc.perform(get("/api/terms"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.length()").value(1));
     }
 
-    /**
-     * 약관 삭제 테스트
-     */
     @Test
-    @DisplayName("약관 삭제 테스트 - 성공 케이스")
-    void deleteTerms_Success() {
-        // given
-        doNothing().when(termService).deleteById(termId);
+    void 약관_삭제_API() throws Exception {
+        mockMvc.perform(delete("/api/terms/1")
+                        .with(csrf())) // CSRF 토큰 추가
+                .andExpect(status().isNoContent());
 
-        // when
-        ResponseEntity<BaseResponse<Void>> response = termController.deleteTerms(termId);
-
-        // then
-        verify(termService).deleteById(termId);
-        assertThat(response.getBody()).isNotNull();
-        assertThat(response.getBody().getResult()).isNull();
-        assertThat(response.getBody().getIsSuccess()).isTrue();
-        assertThat(response.getBody().getMessage()).isEqualTo(SuccessCode.DELETED.getMessage());
+        Mockito.verify(termService).delete(1L);
     }
 }
